# looker-loader

./: .gitignore  LICENSE  README.md  loader_recipe.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  lexicanum.md  loader-config.md
docs/advanced/: recipes.md
docs/cli/: cli-reference.md
docs/configuration/: loader-recipe.md
docs/getting-started/: installation.md  quick-start.md
looker_loader/: cli.py  enums.py  utils.py
looker_loader/databases/bigquery/: database.py  enums.py
looker_loader/generator/: lookml.py
looker_loader/models/: config.py  database.py  lex.py  looker.py  recipe.py
looker_loader/tools/: label_gatherer.py  lkml_converter.py  llm.py  recipe_mixer.py
src/: cli.py  enums.py  exceptions.py  utils.py
src/databases/bigquery/: database.py  enums.py
src/databases/bigquery/models/: bigqueryTable.py
src/models/: config.py  database.py  looker.py  recipe.py
src/tools/: recipe_mixer.py  string_manipulation.py  structure_generator.py
tests/: test_bigquery.py  test_recipe.py
tests/database/: test_bigquery.py
tests/fixtures/: bigquery.py
tests/fixtures/basic/: loader_recipe.yml
tests/fixtures/basic/database/: test_bigquery.py
