[project]
name = "looker_loader"
version = "0.1.43"
description = "a tool for flexibly loading schemas from bigquery into looker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "curio>=1.6",
    "google-cloud-bigquery>=3.30.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lkml>=1.3.7",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "rich-argparse>=1.7.1",
    "rich>=13.9.4",
    "ruamel-yaml>=0.18.10",
]

[uv]
requires_python = ">=3.12"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.13.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [ "{major}.{minor}.{patch}",]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.pytest]
mock_use_standalone_module = true

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
known_first_party = "kelvin"

[tool.datamodel-codegen]
field-constraints = true
snake-case-field = true
strip-default-none = false
target-python-version = "3.12"

[tool.hatch.build.targets.wheel]
packages = ["looker_loader"]

[project.scripts]
looker_loader = "looker_loader.cli:main"
